docs/specs/conversation-search/v3.11/spec.md
# 這份文件怎麼讀

這是「對話內容搜尋」的功能規格：從歷史抽屜進入一個獨立的搜尋畫面，邊打邊篩所有對話的訊息本文，看得出命中在哪一段對話的哪一則訊息，點下去開啟那段對話。全部是本地文字比對，不碰網路也不碰推論引擎。

- **只想知道這是什麼** → 讀「功能總覽」，一節就夠。
- **QA 要寫測試 / 冷讀驗收** → 讀本檔的「行為規格」與 `spec-tasks.md` 的驗收標準。行為規格不談任何實作手段，每條都是「什麼情況下、做了什麼、必須發生什麼」。**架構決策那一節從 v3.11 起全部是建議，QA 不驗它。**
- **RD 要動這塊程式碼** → 讀 `spec-architecture.md`。**那裡面全部是建議** —— 換一種做法而達到相同的可觀察行為，不算違反。必須成立的東西全部在本檔的行為規格與 `spec-tasks.md` 的驗收標準裡。
- **要知道現在還欠誰一個決定** → 開 `spec-decisions.md`，開檔就看得出來（**目前 1 項 —— 決策 H：資料夾版控之後，別的文件要怎麼指向這份 spec。它不擋任何人開工**）。
- **要知道什麼不在範圍內** → 讀 `spec-tasks.md` 的「明確不做」，每條附回來處理的觸發條件。
- **要知道某條規則為什麼長這樣、或某一輪改了什麼** → 讀 `spec-appendix.md`。

## 檔案地圖

本規格原本是單一檔案，v3.3 依它原有的六節切成四個檔案；v3.4 再把「需要你決策的事項」拆成獨立的第五個檔案。入口是本檔。
**（v3.11）本規格改成資料夾版控：每一輪的定版留在自己的目錄裡（本輪是 `v3.11/`），上一輪原封不動。跨輪的東西（收件匣、歷次變更說明）留在上一層目錄。**

| 檔案 | 裝什麼 | 主要讀者 |
|---|---|---|
| `spec.md`（本檔） | 這份文件怎麼讀、檔案地圖、功能總覽、**行為規格 §1–§9** | 所有人；QA 判 pass/fail 的主要依據 |
| `spec-architecture.md` | **架構決策 §A–§G —— 全部是給 RD 的建議，QA 不驗** | RD |
| `spec-decisions.md` | **需要你決策的事項**（只放還沒拍板的；**目前 1 項：決策 H**） | 使用者 |
| `spec-tasks.md` | **任務 1–14 與驗收標準**、明確不做 | RD 與 QA |
| `spec-appendix.md` | 修訂記錄、舊代號對照表、決策歷程、歷次全驗的結論、已知取捨與風險 | 想知道「為什麼會變成這樣」的人 |

> **v3.11（本輪）沒有新功能、沒有 bug、沒有改變任何一條規則要求的行為。** 處理收件匣四筆，全部是使用者裁決的落實：
> 1. **資料夾版控**（見上面的檔案地圖）—— 只是路徑變更，沒有規則變更。
> 2. **架構決策 §A–§G 依准入判準重新分類，§F 整節收掉。** 說得出使用者後果的搬進行為規格或驗收條文（本檔因此新增 **§2.11「什麼算空白只能有一個答案」**與 **§9「對話存取層必須保留的既有行為」**，兩節的規則都是原文搬家，一個字都沒有改）；其餘留在 `spec-architecture.md` 當**建議**。**§F 那七條是每份規格都適用的通則**（誰驗什麼、條文 → 測試、規則 → 條文、跨輪衝突…），它們的權威在 PM 與 QA 的角色定義裡，**spec 端只留一句指路，不留摘要** —— 抄一份進來就會出現第二個版本，而那正是本規格一再記錄的失效模式。
> 3. **依「每一條驗收都要說得出它獨自抓得到什麼」全面掃過一次驗收條文**，追溯不到使用者後果的移除或改寫。**編號一律保留不遞補。** 被移除的是**條文**，不是**要求** —— 每一條被拿掉的地方都寫著它原本守什麼、現在還有沒有東西在守。**這是一次性的補掃**（v3.5「101 條規則」那次補掃的對偶：那次問「規則有沒有條文守」，這次問「條文有沒有後果撐」），之後由准入判準每輪擋住新的。
> 4. **任務 3 驗收 16 指定測資形狀** —— 舊測資在數學上永遠碰不到 surrogate pair 的邊界，突變驗證證明它的鑑別力是零；條文現在寫明兩個方向各要一個會碰到邊界的案例。
>
> **本輪的完整對照表（哪一條規則去了哪裡、哪一條驗收為什麼被拿掉）在 `changes-v3.11.md`**，依既有處理方式，機械性的對照表不進 spec。
>
> **本輪新增一項待決事項（決策 H）**：`docs/product/features.md` 有三十幾處指向 `docs/specs/<slug>/spec.md`，而兩份 spec 都已搬進版號目錄，**那些路徑現在是斷的**。修法有四種、長期成本差很多，而且**同一個問題在另一輪一模一樣** —— 依「兩輪之間的衝突不得由 PM 自己選一邊」，這一題等使用者拍板。**它不擋任何人開工。**
>
> **v3.10 沒有新功能、沒有 bug。處理一筆使用者裁決的三項，`spec-decisions.md` 因此回到 0 項待決。** 三項：(1) **決策 F 選 (a)，維持現狀** —— 那七條「一字未改」類驗收的三項判定**一字不改**（**v3.11 註**：那七條與那一節在本輪整批處理掉了，見上面第 3 點）。(2) **§6.5 降級成建議**：**任務 8 驗收 14 的結構那一半整個拿掉**，行為那一半保留；§6.5 留在本檔當提醒，**不再有任何驗收條文，QA 不判它**。裁決的依據是使用者自己套用了新的驗收通則 —— 那一半**抓到違反 0 次、害正確的實作差點被判 fail 3 次、為了修它花了 3 輪**。(3) **決策 G**：第一點**因第二項而整個消失**（**被取消而不是被解決**）；第二點**照修** —— 任務 12 驗收 2 現在明文允許替代做法、要求每次用了都在報告裡寫明原因，**並要求哪一輪發現環境已經能設剪貼簿時必須回報**。
>
> **v3.9 沒有新功能、沒有 bug、沒有改動任何一條規則。本檔（行為規格）一個字都沒有動。** 本輪處理兩筆收件匣：(1) 依使用者裁決動任務 10 的兩條驗收（**驗收 6 移除**、**驗收 4 保留核對、拿掉「必須寫進本節」**）；(2) 任務 10 的兩段執行紀錄一個字都沒刪，移到該任務的驗收標準之後、標明是歷史；(3) **決策 E 結案** —— 不是被拍板，是驗收 6 一拿掉就沒有任何驗收再依賴那段紀錄的位置；(4) 依使用者新定下的**驗收通則**掃過本規格，掃出來的同型條文只列進 `changes-v3.9.md`，另附 §A–§G 的盤點（**那份盤點就是本輪 v3.11 重新分類的材料**）。
>
> **v3.8 沒有新功能、沒有 bug、沒有改動任何一條規則的實質內容，也沒有改動任何一條驗收「要驗的東西」。** 三件事：(1) 決策 E 的裁決 —— 使用者指出真正的問題是**兩輪同時進行時的衝突怎麼處理**，並定下規則「衝突時 PM 不得自己選一邊，拉給使用者判斷，拍板之後由 PM 同步兩邊的 spec」；(2) 依使用者定下的新寫法規則掃過本規格五份檔案，把寫死的數量、指向不存在檔案的引用改成不會自己變錯的指法；(3) 使用者已逐項接受 v3.7 那四項自主判斷。
>
> **v3.7 沒有新功能，也沒有改動任何一條規則 —— 全部是處理一次全驗回來的結果。** 四件事：任務 10 的執行紀錄補記與「目前狀態」更新；兩處條文的可判定性改寫（要驗的東西一字未變）；spec 不再把同目錄的 `test-report.md` 當證據引用（歷次全驗的結論改記在附錄）；任務 4 驗收 6 補記現況。**本輪唯一新增的條文是任務 3 驗收 26。**
>
> **v3.6 沒有新功能，把三件懸而未決的事收掉。** (1) **決策 C 拍板**：**停止生成從此算一次更新** —— §8.2 那張「不算一次更新」的清單裡「停止生成」那一項**整條移除**，§8.1 的列舉裡點名它、§8.6 換掉節名與判定方式。**這不是推翻先前的裁決** —— 「時間只跟著內容走」一個字都沒有改，**線沒有移動，是「停止生成」這件事從線的一邊換到另一邊**。(2) **決策 D 拍板為不升格**。(3) 任務 8 驗收 14 與 §6.5 的結構條文改寫成「禁止什麼」而不是「允許幾個分支」。
>
> **v3.5 沒有改動任何一條規則，只做三件事**：(1) 依使用者裁決把「規則 → 條文」的反向核對升格成硬性條文（**v3.11 註**：那條規則已搬進 PM 的角色定義，spec 端不再保留）；(2) 執行**一次性全面補掃** —— 對現存的 101 條規則逐條問「這條被違反時有沒有任何驗收會發現」，**補上 13 條驗收條文**，並對 8 處明寫「由哪一層守」；(3) 決策 B 拍板後移出 `spec-decisions.md`。
>
> **v3 依使用者裁決改了三條規則，其中兩條會讓現行實作的行為改變 —— 這是知情且刻意的，目標是先把規格調對、實作再跟上。** 會改行為的兩條是：查詢欄位的空白處理（§2.8–§2.10，**推翻了舊的「查詢欄位不得 trim」**）與對話「最後更新時間」的定義（§8）。第三條（摘要的兩個數字，§3.4）在 **v3.1 依使用者原意改成「維持現狀、不動程式」**。任務 1–9 於 v2 已完成並通過驗收（歷次全驗的結論記在 `spec-appendix.md`／「歷次全驗的結論」）。
>
> **v3.2 只修正一處被實測推翻的舉證，規則字面一條都沒有改。**
>
> **v3.3 只補驗收條文，一條規則都沒有改。** QA 全驗指出三條規則**寫在這裡、但沒有任何驗收條文會發現它們被違反**：§4.2 的視窗選取分支、§3.5 的「歷史版本時間較新時仍取記憶體那份」、§1.2 的人格名稱。**§4.2 那條連帶暴露了實作的一個 off-by-one（命中長度恰為 60 時走錯分支）—— 那是實作沒照既有規則做，不是規則要改。**
>
> **v3.4 沒有改任何一條規則，只做記錄與搬家。**

## 索引

本文用到的引用標的全部列在這裡。

| 標的 | 一句話 |
|---|---|
| 行為規格 §1 | 什麼算命中：搜什麼、大小寫全形怎麼折、什麼不折 |
| 行為規格 §2 | 空白的規範定義、空查詢的表現、**查詢欄位裡留下什麼**、回顯哪一版、**四個使用點對「什麼算空白」必須是同一個答案（§2.11，v3.11 新增）** |
| 行為規格 §3 | 結果怎麼分組、排序、上限與總數 |
| 行為規格 §4 | 片段怎麼裁、標示落在哪 |
| 行為規格 §5 | 怎麼進、怎麼離開、旋轉與行程死亡 |
| 行為規格 §6 | 點擊命中列會發生什麼（**v3.10：§6.5 降級成建議，不再有驗收條文**） |
| 行為規格 §7 | 鍵盤彈出時結果要看得見 |
| 行為規格 §8 | 對話的「最後更新時間」什麼時候前進、什麼不算（**v3.6：停止生成從此算一次更新**） |
| 行為規格 §9 | **對話存取層搬移之後必須保留的既有行為**（v3.11 新增，原文從架構決策搬過來） |
| 架構決策 §A–§G | **全部是給 RD 的建議，QA 不驗**（v3.11 重新分類）。內文在 `spec-architecture.md`，那一檔開頭有一張「原本那 43 條各自去了哪裡」的對照表 |

---

# 功能總覽

## 使用者看到什麼

打開歷史抽屜，在歷史區塊看到一個「搜尋對話內容」的入口列。點下去，抽屜關閉，進入一個**全螢幕的搜尋畫面**：輸入框固定在最上方、自動聚焦、鍵盤自動彈出，下面整片都是結果。

還沒打字時，畫面上是一句引導文案。開始打字，每按一個鍵結果就重算一次，沒有送出鈕。結果以**對話為單位分組**：一列標頭（人格、模型、時間），底下最多三則命中列，每列是「作者 + 一段含省略號的片段」，命中的那幾個字被標成主題色。一段對話命中超過三則時，底下多一行「還有 N 則符合」。最上面有一行摘要：「N 段對話・M 則訊息」。

分組的順序是「這段對話的內容最後一次改變的時間」新到舊。**只是切過去看一眼，不會讓一段對話浮到最上面**（§8）。

輸入框對空白有規矩：**在空欄位上按空白鍵等於沒有反應**，開頭的空白永遠留不住；但你正在打的字後面那個空白會留著（不然「北京 天氣」中間那一格永遠打不出來），直到輸入框失去焦點才被清掉。中間的空白怎麼打就怎麼顯示。

完全沒有命中時，只出現一句「找不到符合『（輸入框裡此刻的字）』的訊息」——括號裡就是輸入框當下的內容，一字不差。

點任何一列命中，就回到聊天畫面並停在那段對話上。用返回鍵離開也回到聊天。這三種離開都會把查詢清空。**旋轉螢幕不算離開** —— 轉過去還在搜尋畫面，字跟結果都在。

搜得到的範圍是「你在螢幕上看得到的一切」：包含剛切人格產生、還沒說過話因此從沒存過檔的那段對話，也包含此刻正在一個字一個字生成中的回覆，還包含每段對話開頭那則人格開場白。

## 系統被切成哪幾塊

| 這一塊 | 負責回答什麼問題 | 邊界 |
|---|---|---|
| **比對純邏輯** | 什麼算命中、片段從哪裡裁到哪裡、要標示哪幾格、命中的對話與訊息各有幾個、什麼算空白、**查詢欄位裡該留下什麼** | 不依賴 Android / Compose / 持久化，可被 JVM 單元測試直接呼叫。是「什麼算命中」與「什麼算空白」的唯一答案來源 |
| **聊天狀態** | 「所有使用者看得到的對話」是哪些、目前的查詢字串是什麼、結果是什麼、**一段對話的最後更新時間什麼時候前進** | 結果是狀態送出去路上算的衍生值，不是被寫進去的欄位 |
| **搜尋畫面** | 把算好的東西畫出來、把使用者的動作轉成回呼、在輸入路徑上套用欄位規則 | 自己不持有狀態來源、不決定什麼算命中、不決定什麼算空白 |
| **畫面切換點** | 現在該顯示聊天、比較、還是搜尋 | 旗標式切換，沒有導覽框架 |
| **對話存取層** | 對話從哪裡來、到哪裡去 | 只知道磁碟上有什麼，**刻意沒有查詢能力**，搜尋路徑完全不碰它 |

## 資料怎麼從一塊流到另一塊

```
使用者打字
  → 依 §2.8 決定「欄位裡該留下什麼」
  → 搜尋畫面把欄位當下的內容交出去
  → 聊天狀態存下欄位內容
  → 狀態送出去的路上：把「開啟中的那段 + 歷史」合成「所有對話」，
     連同查詢一起交給比對純邏輯
  → 比對純邏輯回傳：哪幾段對話、每段哪幾則訊息、每則的片段與標示區間
  → 搜尋畫面照著畫，負責上色、排版，以及摘要列上那兩個數字
```

摘要的「幾段對話、幾則訊息」在比對層也算得出來，但畫面目前是自己從結果列表算的 —— **這份重複是使用者知情保留的，見附錄／已知取捨與風險。**

反方向只有一條：使用者點命中列 → 畫面把那段對話的 id 交回去 → 聊天狀態切換對話並清空查詢 → 畫面切回聊天。

**沒有任何一條線通往磁碟。** 對話早就整份在記憶體裡了（開啟中的那段 + 歷史清單），搜尋不需要為了拿資料再回硬碟一趟；而且**磁碟上那份必然比較舊**（理由見架構決策 §B.2，那是建議）。

---

# 行為規格

QA 主要照這一節寫測試。每條都是可判定的。條文編號形如 §2.4，第一個數字是底下的小節。

**哪些條文可以只用單元測試證明、哪些必須實機看，寫在各任務的說明與條文裡**（`spec-tasks.md`）。（**v3.11**：這裡原本指向架構決策 §F，那一整節已經收掉 —— 它寫的是每份規格都適用的通則，權威在 PM 與 QA 的角色定義裡；本規格特有的那兩件事已經寫進任務 3、7、9、13 的說明。）

## §1 什麼算命中

**§1.1 搜尋範圍是所有對話的每一則訊息本文。** 使用者寫的與助理寫的都能搜到，包含每段對話開頭那則固定的人格開場白。**不得對訊息做任何層級的過濾。**（此條為使用者裁決。）
- 可判定：一段對話含一則使用者訊息與一則助理訊息，各查其中的字，兩則都必須命中。
- 可判定：查開場白裡的字，命中的必須是該對話的第 0 則、作者為助理的那一則。

**§1.2 只有訊息本文參與比對。** 對話標題、預覽、人格名稱、模型名稱、時間都不參與。
- 可判定（人格名稱）：一段對話的人格顯示名為「老師」，而它所有訊息本文都不含「老師」二字 → 查「老師」**不得**命中該對話；**同一段對話用它訊息本文裡確實存在的字查，必須命中**。
  - 後半句不得省略：只有否定斷言的話，一個永遠回空的實作也會通過這條 —— 同 §2.7 的教訓。
- 可判定（模型名稱）：同一段對話的模型顯示名為「Qwen2.5 0.5B」，訊息本文不含這串字 → 查「Qwen」不得命中；**查「qwen」也不得命中**（大小寫不敏感是 §1.4 的性質，所以兩種寫法都要試，否則一個只比對小寫的錯誤實作會漏掉一半）。
- 可判定（標題）：一段只有開場白的對話，其標題為「還沒說話」→ 查「還沒說話」不得命中，而查開場白裡的字必須命中。**（v3.7：這一條原本沒有任何驗收指名它 —— 任務 3 驗收 24 只覆蓋了人格與模型名稱那兩條 —— 本輪補上任務 3 驗收 26。規則未動，測試也早就存在，補的是條文。）**
- **這幾條為什麼不是多餘的（v3.3 補寫）**：人格名稱與模型名稱是**印在分組標頭與命中列上的字**（§3.8），而 §1.1 的語氣是「使用者看得到的都搜得到」。兩者相接的地方正好是這條規則。它擋的是一個很自然的後續改動 ——「讓使用者可以用『老師』找出所有老師人格的對話」—— 而那個改動不會讓任何既有測試變紅。
- **時間刻意沒有各自的可判定條文**：標頭上的時間是畫面把毫秒值算繪成文字之後才存在的字串，比對層拿不到它，所以「不參與比對」在結構上就不可能被違反。這是它與人格／模型名稱的差別，差在可觀察性，不在規則。

**§1.3 子字串比對，整串一起找。** 查詢（經 §2.3 整形後）必須以**一段連續子字串**出現在訊息（同樣整形後）之中才算命中。不斷詞、不做相關度排序、不做多詞 AND。
- 可判定：查「北京 天氣」→ **命中**「我在北京 天氣很好」；**不命中**「北京很大，天氣很好」（兩個詞都在，但不相鄰）。
- 已接受的代價：英文會有 `cat` 命中 `concatenate`。

**§1.4 大小寫不敏感。** `hello` 命中 `Hello world`；`HELLO` 亦然。

**§1.5 全形與半形 ASCII 不敏感，兩個方向都要。** U+FF01–U+FF5E 與 U+0021–U+007E 視為同一個字。
- 可判定：`ABC` 命中 `ＡＢＣ`；`ｈｅｌｌｏ` 命中 `Hello`。
- 注意：全形空白 U+3000 **不**屬於這條，它歸 §2（空白）。

**§1.6 不做繁簡、異體、注音、拼音、同義詞的對應。**
- 可判定：「台」**不**命中只含「臺」的訊息；反向亦然。

**§1.7 即時，沒有送出鈕。** 輸入內容每變動一次，結果就必須重算一次。
- 允許（非必要）：若低階裝置實測有卡頓，可加入輸入停止後才觸發的延遲。但**不得**出現「必須按下某個鈕才會搜」的行為。
- **可判定（v3.5 補寫）**：造一段測資，使「北」與「北京」的命中則數不同。輸入「北」，**不按任何鈕、不收鍵盤**，等待輸入停止 1 秒內結果必須出現；接著輸入「京」，同樣不做任何其他動作，**結果必須改變成「北京」那一組**。
  - 正向這一半不得省略：只斷言「畫面上沒有搜尋鈕」的話，一個把重算綁在別的事件上（例如收鍵盤、或旋轉）的實作也會通過。
  - 同時斷言否定的那一半：輸入框所在的畫面上，**沒有任何按下才會觸發搜尋的控制項**（鍵盤上的動作鍵按下去也不得是「按了才搜」的唯一途徑 —— 判準是「不按它結果也已經是對的」）。
  - 允許延遲的寫法通過本條：判讀點是「輸入停止 1 秒後」，不是「按鍵當下的那一幀」。

**§1.8 搜得到的必須等於畫面上看得到的。**
- 剛切換人格 / 模型產生、只有開場白、從未存檔的那段對話，必須搜得到（可判定：切人格後查其開場白，該段對話必須出現，且排在最前 —— 它剛被建立，而建立就是它自己的第一次更新，見 §8.7）。
- 正在串流生成中的回覆，其**當下已顯示**的內容必須搜得到；命中數會隨串流自行增加。（實機攔截困難，屬盡力而為 —— 攔不到就記「未能觀察」，不判 fail；可接受的間接佐證：送出後進入搜尋，能搜到尚未落盤的新訊息。）

**§1.9 歷史尚未載入完成前搜尋，結果可能不含尚未載入的對話。** 這是允許的狀態，**不判為缺陷**，也不為它做載入中畫面。
- **可判定（v3.5 補寫）**：搜尋畫面在**任何**狀態下，結果區只會是三種樣子之一 —— 引導文案（未搜尋）、結果列表、「找不到…」。**不得出現第四種「載入中」的樣子**（進度指示、骨架列、「載入中」字樣皆不得有）。
  - 正向對照不得省略：同一次執行裡，等歷史載入完成後用同一個查詢再看一次，**結果必須包含歷史裡的對話** —— 否則一個永遠不去讀歷史的實作也會滿足「沒有載入中畫面」。
  - 「載入尚未完成的那一瞬間」本身攔不攔得到不影響判定：攔不到就記「未能觀察」，本條的兩半都不依賴攔到那一瞬間。

**§1.10 搜尋全程不觸發推論、不產生檔案讀寫。**
- 可判定：搜尋期間狀態列不變、沒有模型載入紀錄；進入搜尋前後，對話檔案的數量與內容一致。

## §2 空白、空查詢、查詢欄位與回顯

**§2.1 「空白」的規範定義。** 這是規範，邊界就是這兩句，沒有「例如」、沒有「等等」：
一個字元算空白，**當且僅當**它 (a) 的 Unicode General Category 屬於 **Z**（Zs、Zl U+2028、Zp U+2029），或 (b) 落在 **U+0009–U+000D**。
涵蓋 U+0020、U+00A0、U+1680、U+2000–U+200A、U+202F、U+205F、U+3000。

**§2.2 零寬與格式字元（Cf）一律不算空白**，特別是 U+200B、U+200C、U+200D、U+FEFF。
- 可判定：含 ZWJ 的組合 emoji（例如 👨‍👩‍👧）通過整形後，字串必須**完全不變**。
- 為什麼必須這樣：零寬字元寬度為零，它不是間隔；把它折成一個看得見的空白，是在使用者沒有空白的地方插進一個空白。而 U+200D 是 emoji 序列的黏著劑，折掉它會把組合 emoji 拆成散字 —— 那已經是在改寫訊息內容了。

**§2.3 整形：連續空白收成一個，前後去除。** 每一段連續空白（依 §2.1）收合成**單一 U+0020**，字串前後的空白去除。**查詢端與訊息端必須套用同一份整形。**
- 可判定：`"北京\r\n\t (U+0020)(U+3000)天氣"` 整形後為 `"北京(U+0020)天氣"` —— 中間恰好一個 U+0020。
- 可判定（下限，掃描式）：掃過 BMP 全部 65536 個碼位，凡符合 §2.1 的字元 c，都必須滿足 `整形("a" + c + "b") == "a b"`。**斷言必須是這個字面形式**；寫成 `整形("a" + c + " b")` 會讓「把空白刪掉而不是收合成空白」的錯誤實作也通過。違反數必須為 0。
- 可判定（上限）：U+200B、U+200C、U+200D、U+FEFF 不得被收合。
- **為什麼兩端必須是同一份**（v3.11 從架構決策搬進來，原文未改）：比對是兩個字串之間的子字串測試，兩邊若不在同一個正規形式裡，這個測試本身沒有意義。訊息端把 `"北京\n天氣"` 整形成 `"北京 天氣"`，查詢端若不整形，含連續空白或含 U+3000 的查詢就**在數學上永遠不可能命中任何訊息** —— 不是「比較難找到」，是這條路被封死。一份規格若允許某些合法輸入永遠無解，那是規格錯誤。**只修訊息端會讓情況更難察覺**：表象會從「兩邊都沒處理」變成「看起來處理了卻還是找不到」。

**§2.4 空查詢等於「沒在搜尋」，不是「找不到」。** 查詢整形後為空時：不進行任何比對、不顯示任何結果列、**不顯示「找不到…」**、不顯示摘要列，顯示引導文案。
- 必須涵蓋的案例：`""`、`"   "`、`"\n\t"`、只有一個 U+3000、只有一個 U+00A0。後兩者是 §2.1 才算空白而 `\s` 不算的字元，**不得省略** —— 只用半形空白測，即使空白定義偷偷縮回 `\s` 也會通過，等於沒驗。
- 最短有效查詢是 1 個非空白字元。
- **驗收層級（v3 補充）**：§2.8 生效之後，「欄位內容是全空白」在畫面上已經不可達（欄位永遠不以空白開頭）。這條的權威因此完全落在**不經過畫面的直接測試**上（見任務 3 的說明）。**那些測試不得因為畫面產不出這種輸入而被刪除** —— 它們守的是比對層的契約，而欄位規則哪天改變時，這一層仍必須撐得住。

**§2.5 「算不算空查詢」與「整形後還剩不剩東西」必須永遠是同一個答案。**
- 可判定：掃過 BMP 全部碼位，**不存在**任何字元使得「畫面認為正在搜尋」而「整形後為空」。違反數必須為 0。
- 為什麼這個方向特別重要：一旦存在這種字元，使用者會看到「找不到符合『（一個看不見的字元）』的訊息」，而不是引導文案 —— 一個他無法理解的錯誤狀態。
- **這條與 §2.11 是同一件事的兩面**：「算不算空查詢」是空白定義的第三個使用點；它若改用語言內建的空白判斷回答，系統裡就多了一份定義（見 §2.11）。

**§2.6 中間的空白有意義，但幾個空白不重要。**
- 可判定：查「北京(3 個半形空白)天氣」命中訊息「北京(U+0020)天氣」。
- 可判定：查「北京(U+0020)天氣」命中訊息「北京(U+3000)天氣」，也命中訊息「北京(U+00A0)天氣」。
- 這條沒有推翻 §1.3：「北京 天氣」仍然是一個**含空白的單一子字串**，不是兩個詞。

**§2.7 前後空白不影響結果，而且結果不得為空。** 查詢 `"  北京  "` 與 `"北京"` 必須得到相同的結果，**且測資必須保證「北京」有命中，該結果不得為空**。
- 為什麼要加後半句：只斷言「相同」的話，一個兩邊都回空的壞實作也會通過 —— 那條驗收對它想守的性質沒有鑑別力。
- 驗收層級：這條是**比對層**的規則，用直接呼叫驗證即可，不要求由畫面產生（畫面上打不出開頭空白，見 §2.8）。

**§2.8 查詢欄位裡留下什麼（v3 改寫，取代舊條文「欄位保存原樣輸入、不得 trim」）。** 四段規則，缺一不可：

- **(a) 開頭：立即移除。** 每一次輸入內容變更之後，欄位內容都不得以空白（§2.1 的定義）開頭。
  - 可判定：欄位為空時按空白鍵 → 欄位仍為空、仍顯示引導文案、不顯示「找不到」。長按空白或貼上單一 U+3000 / U+00A0 亦同。
  - 可判定：貼上「(3 個半形空白)北京」→ 欄位內容為「北京」（以逐碼位讀取判定，不是看截圖）。
  - 可判定：把游標移到欄位最前面按空白鍵 → 欄位內容不變。
  - 可判定：欄位內容為「北京(2 個空白)」時，把「北京」兩個字刪掉 → 欄位變成空、回到未搜尋狀態（顯示引導文案），**不得**顯示「找不到符合『  』的訊息」。
- **(b) 尾端：打字過程中原樣保留。** 只要輸入框仍持有焦點，欄位尾端的空白就必須留著。
  - 可判定：輸入「北京」再按一次空白鍵 → 欄位內容為「北京(1 個空白)」；接著輸入「天氣」→ 欄位內容為「北京(1 個空白)天氣」，且該查詢命中含「北京 天氣」的訊息。
- **(c) 失去焦點時：移除尾端空白。** 輸入框不再持有輸入焦點之後，欄位尾端的空白必須被移除；重新取得焦點時不得把它加回來。
- **(d) 中間：不得改寫。** 欄位裡的空白（含連續空白、U+3000、U+00A0 等）在打字過程中不得被收合、替換或以任何方式改寫。**整形後的字串不得被寫回欄位。**

- **為什麼 (b) 與 (d) 是硬性的**：這是舊條文「不得 trim」原本要守的東西，本輪只把它縮小、沒有丟掉。若把整形後的字串寫回欄位，使用者連一個空白都打不出來 ——「北京 天氣」中間那一格，在被打出來的**當下就是尾端空白**，當場移除它，中間空白就永遠無法輸入。開頭那一端不受這個保護，因為開頭空白對比對完全沒有作用（§2.3、§2.7），移除它不會讓任何查詢變成打不出來。
- **不變式（可判定）**：任何時刻，欄位內容都不以空白開頭；因此「欄位內容為全空白」在畫面上不可達（§2.4 的驗收層級說明即由此而來）。
- **判斷「這個字元算不算空白」時用的必須是 §2.1 那一份**，見 §2.11。

**§2.9 回顯用的是欄位當下的內容。** 「找不到符合『…』的訊息」中的字串，必須與此刻輸入框裡的內容**逐字元相同** —— 不是整形後的版本，也不是使用者按鍵的原始序列。
- 可判定：輸入 `"  kiwi  "`（前後各兩個空白，且 kiwi 保證無命中）→ 欄位內容為 `"kiwi  "`（開頭兩個已被移除、尾端兩個還在），文案為 `找不到符合「kiwi  」的訊息`。使輸入框失去焦點後，欄位內容為 `"kiwi"`，文案同步變成 `找不到符合「kiwi」的訊息`。
- 為什麼不是整形後的版本：使用者打了三個空白卻在文案裡看到一個，那是他沒打過的字串；回顯的用途是讓他確認「我打的就是這個」。

**§2.10 §2.8 的兩次移除都不得改變搜尋結果。** 開頭空白的移除、以及失焦時尾端空白的移除，前後的結果列表、摘要的兩個數字、以及「是否處於搜尋狀態」都必須完全相同。
- 可判定：輸入「北京(2 個空白)」記下結果與摘要 → 使輸入框失焦 → 結果與摘要一字不差。
- 為什麼必然成立：比對用的一律是整形後的文字（§2.3），而整形本來就會去掉前後空白。若這兩者出現差異，代表欄位規則與整形用了**兩份不同的空白定義**（§2.11 禁止）。

**§2.11 「什麼算空白」在整個系統裡只能有一個答案。（v3.11 新增：規則本身沒有改，它原本寫在架構決策裡，本輪搬進行為規格並補上可判定條文。）**

空白這件事在**四個地方**被問到：訊息端整形（§2.3）、查詢端整形（§2.3）、「這個查詢算不算空的」（§2.4、§2.5）、以及查詢欄位的開頭／尾端規則（§2.8）。**四者對同一個字元必須永遠給出同一個答案，沒有例外。**

- **可判定（三個字元 × 四個使用點，答案必須一致）**：
  - **U+0020**（ASCII 空白，四處都算空白）與 **U+00A0**（Zs，但 `\s` 不算它）：兩端整形都把它收合成單一 U+0020；只有它的查詢是**未搜尋狀態**（顯示引導文案）；放在欄位開頭時**必須被移除**。
  - **U+001C**（C0 的檔案分隔字元，依 §2.1 **不算**空白）：兩端整形都**不得**收合它；只有它的查詢**算在搜尋**（顯示「找不到…」而不是引導文案）；放在欄位開頭時**必須留著**。
- **為什麼這條是硬性的，而且後果是確定的**：一旦出現第二份定義，兩份遲早分歧，而分歧那天使用者會看到「畫面說的」與「搜得到的」對不起來。已經發生過的兩種樣子：
  - 「算不算空查詢」曾經用語言內建的空白判斷回答，那是系統裡的**第二個**空白集合。它一旦比 §2.1 窄，使用者就會看到「找不到符合『（一個看不見的字元）』的訊息」而不是引導文案 —— §2.5 守的正是這個方向。
  - 查詢欄位若改用語言內建的 trim，**開頭的 U+001C 會被悄悄吃掉**。這是實測過的：內建的那一份恰好是 §2.1 再加上 U+001C–U+001F，兩個集合**不相等**（經過與更正記錄在 `spec-appendix.md`／決策歷程）。
- **只要兩個集合不相等，用內建的就會在某些輸入上答錯** —— 單向落差或雙向落差對這個結論沒有差別。所以這條要的是**四處共用同一個答案**，不是「擋住某幾個特定字元」。零寬字元的排除（§2.2）是這個答案的一部分，不是另一條規則。

## §3 結果的組織、數量與順序

**§3.1 以對話為單位分組，只有「至少一則訊息命中」的對話才會出現。** 不得出現只有標頭、底下沒有任何命中列的分組。

**§3.2 排序。** 分組依對話最後更新時間**新→舊**；同一分組內的命中依訊息原本的先後順序。
- 「最後更新時間」什麼時候前進、什麼不算，見 §8。這條沒有變，變的是那個時間本身的定義。

**§3.3 每段對話最多顯示 3 則命中。** 實際命中訊息數超過顯示數時，該分組底下必須顯示「還有 N 則符合」，N = 實際命中數 − 顯示數。
- 可判定：一段對話有 5 則命中 → 顯示 3 則 + 「還有 2 則符合」。
- 截斷必須發生在比對層（可被單元測試直接觀察到 `顯示數 == 3` 且 `實際命中數 == 5`），不得只在畫面上截 —— 放在畫面就變成不可測。

**§3.4 摘要列顯示「N 段對話・M 則訊息」，N 為有命中的對話段數、M 取未截斷的命中訊息總和。**
- 可判定：三段對話分別命中 5 / 2 / 2 則 → 摘要為「3 段對話・9 則訊息」，而畫面上只列出 3 + 2 + 2 筆。
- **（v3.1）這兩個數字由誰算出來，本輪不做規定。** 上面那條可判定條文守的是**畫面顯示的值**；至於它是問比對層要的、還是畫面自己從結果列表算的，不在要求範圍內。系統裡目前兩份寫法都存在，這是使用者知情保留的（代價與觸發條件見附錄／已知取捨與風險）。
- 摘要列只在有結果時出現：空查詢與無命中都不顯示它（§2.4）。

**§3.5 同一段對話只能出現一次，且以記憶體那份為準。** 「開啟中的那段」與「歷史清單裡的那段」若是同一段，必須只出現一次，且是含有未存檔訊息 / 串流中內容的那一份。
- 可判定（訊息多寡）：構造同 id、但歷史版本少一則訊息的情境 → 結果中該 id 只出現一次，且是訊息較多的那份。
- 可判定（歷史版本的時間較新時，仍取記憶體那份）**（v3.3 補寫）**：三段對話 ——
  - 記憶體那段：id `same`、最後更新時間 100、含兩則會命中的訊息；
  - 歷史裡同 id 的那段：id `same`、最後更新時間 900、只含其中一則；
  - 另一段：id `other`、最後更新時間 500、含一則會命中的訊息。
  查那個共同的字 → 結果**恰為兩個分組**，順序是 `other`、`same`（`same` 依記憶體那份的時間 100 排序，所以排在後面），且 `same` 這一組回報的命中訊息數為 **2**。
  - 這個案例同時擋掉兩種寫法：**先排序再去重**（歷史那份會贏，順序變成 `same`、`other`，命中數變成 1），以及**去重時挑「時間比較新的那份」**。少了排序位置那一半，第一種寫法有機會蒙混過關。
- **留哪一份與排序之間有先後關係，而那個先後就是規則本身**：留下哪一份必須先決定，決定之後才輪到排序 —— 否則「時間比較新的那份贏」會取代「記憶體那份贏」。（v3.11：這句話原本寫在架構決策裡，原文搬進來。）
- **驗收層級（v3.3）**：這個情境在畫面上不可達 —— 歷史清單本來就會把開啟中那段濾掉，所以畫面產不出「同一段出現兩次」的輸入。這條的權威因此完全落在不經過畫面的直接測試上（比照 §2.4 的驗收層級）。**該測試不得因為畫面產不出這種輸入而被刪除** —— 它守的是合併語意的契約，而那個不變式哪天被切換邏輯的改動打破時，這一層仍必須撐得住。

**§3.6 跨對話的訊息編號會重複。** 訊息編號在每段對話內從 0 開始，不同對話會撞號。列表必須能同時列出多段對話的第 0 則而不錯亂、不崩潰。
- 可判定：查一個落在多段對話開場白裡的常見字（會讓多段對話的第 0 則同時命中），捲完全部結果，不得崩潰、不得錯位。

**§3.7 開場白造成的大量重複命中是正確行為。** 搜「今天」這類落在開場白裡的常見字，會讓**每一段**使用該人格的對話各出現一次，片段幾乎一模一樣，摘要數字也隨之變大。
- **不得**加入任何去重、降權、或「相同片段只顯示一次」的處理。（使用者已接受這個代價，換到的是「使用者看過的任何一句話都搜得到」。）
- 可判定：三段同人格的對話，查其共同開場白裡的字 → 三段全部出現。

**§3.8 分組標頭顯示人格（emoji + 名稱）、模型名稱與時間，不顯示對話標題。**
- 可判定：只有開場白的空白對話，其分組標頭**不得**出現「還沒說話」（那是標題對空白對話的回傳值，既不是命中內容，也不是搜尋看得到的東西）。
- **可判定（正向，v3.5 補寫）**：任一有命中的分組，其標頭上必須同時看得到該對話的**人格 emoji、人格名稱、模型名稱、時間**四樣；換一段人格或模型不同的對話，標頭上那幾個字必須跟著改變。
  - 這一半不得省略：上一條是純否定斷言，一個**把整個標頭拿掉**、或標頭永遠印同一組固定文字的實作，也會通過它。這正是本文記過的第二型失效（見 §1.2、§2.7）。

**§3.9 命中列不提供刪除或任何會改動資料的操作。**
- **由哪一層守（v3.5 明寫）**：由任務 8 驗收 6（命中列上沒有刪除鈕）加上任務 8 驗收 5（點擊命中列前後，磁碟上的對話檔數量與內容一致）共同守住 —— 前者管「看得到的入口」，後者管「按下去之後有沒有改到資料」。**不另立獨立條文**：這條規則的可觀察面只有這兩個，再寫一條會是同一個觀察的第三次抄寫。

## §4 片段與標示

**§4.1 片段是訊息整形後（§2.3）的一段連續子字串**，長度上限 **60** 個 UTF-16 code unit。

**§4.2 視窗選取。** 以該則訊息的**第一個**命中為準，起點往前留 **20** 個字當引子（不足則從訊息開頭起算）；若命中本身的長度已 ≥ 60，則從命中起點取 60。

- **（v3.3 補寫）這兩個分支的界線就在「命中長度 = 60」上，而界線本身必須被驗到。** 以下三條可判定共用同一個形狀的測資：訊息為 **30 個「甲」＋ L 個「乙」＋ 30 個「丙」**，查詢為 **L 個「乙」**。測資只用 BMP 字元，避免與 §4.4（不得切開 surrogate pair）互相干擾。
  - 可判定（**L = 59**，走引子分支）：片段為「…」＋ **20 個「甲」**＋ **40 個「乙」**＋「…」（去掉兩個省略號後長度為 60）；標示恰有一段，取出來是那 40 個「乙」，**標示之前還有 20 個引子字元**（不含省略號）。
  - 可判定（**L = 60**，走命中起點分支）：片段為「…」＋ **60 個「乙」**＋「…」；**片段裡不得出現任何「甲」**；標示恰有一段，從開頭那個「…」之後的第一個字元起算、長度 60。
  - 可判定（**L = 61**，同樣走命中起點分支）：片段與標示與 L = 60 完全相同 —— 命中的第 61 個字元落在視窗外，依 §4.6 被夾到實際顯示的範圍。
  - **為什麼三個都要**：只驗「一個很長的命中」，判斷式寫成 `≥ 61`（少留一個字才切換分支）或 `≥ 59` 都會通過。**L = 59 與 L = 60 的預期片段必須不同**，這條界線才算被釘住。
  - **這條的來歷**：舊的驗收清單裡沒有任何一條會造出「命中長度 ≥ 視窗」的輸入，所以這個子句從來沒有被覆蓋過，期間實作上的一個 off-by-one 活了四輪（見附錄／決策歷程）。**規則本身沒有改變。**

**§4.3 省略號。** 起點大於 0 時片段前面補一個「…」；終點未達訊息尾端時後面補一個「…」。省略號**不計入** 60，但**計入**標示區間的索引。
- 可判定：命中落在第 100 個字時，片段以「…」開頭、長度符合上述規則、標示位置正確。
- 可判定：短訊息整則都放得下時，前後都不得出現「…」。

**§4.4 不得從 surrogate pair 中間切開。**
- **可判定（v3.11 補寫測資的性質）**：片段逐碼位讀出來，**第一個 code unit 不得是落單的低位代理，最後一個 code unit 不得是落單的高位代理**。**這條的鑑別力完全取決於測資有沒有真的碰到邊界**，兩個方向各要一個案例，測資形狀寫在任務 3 驗收 16。

**§4.5 標示區間的語意。** 指向**片段本身**、以 UTF-16 code unit 計、**半開區間**、彼此**不重疊**、**由小到大**排序，且完全落在片段範圍之內。

**§4.6 視窗內的每一個命中都要標示**，不只是視窗所依據的那一個；跨越視窗邊界的命中，夾到實際顯示的範圍。

**§4.7 標示長度等於整形後查詢的長度。**
- 可判定：使用者打「北京(2 個半形空白)天氣」（6 個字元）命中時，標示區間長度為 **5**，且該區間對應的片段內容恰為「北京(1 個空白)天氣」。

**§4.8 含換行的訊息命中時，標示必須落在正確的字上。**
- 可判定：訊息為「第一行\n這裡有北京兩個字」，查「北京」→ 片段中被標示的區間，取出來恰好是「北京」。
- **這一條是「整形必須排在最前面、折疊不得改變長度」的可觀察面**（v3.11 從架構決策搬進來的性質，機制上怎麼達成是 RD 的判斷）：整形會改變索引、折疊不會，順序反了或折疊改了長度，含換行的訊息上標示一定錯位 —— 而模型回覆幾乎都含換行。

**§4.9 算繪。** 命中的字必須與周圍文字有明顯視覺差異，顏色取自主題（不得寫死色碼）；命中列單行顯示、超出以省略號截斷、不得破版 —— 中文、英文、標點與 emoji 皆然。
- 可判定（實機）：以一則長中文訊息驗證，且測資必須讓**命中位置 20 字以內含有 emoji**，使片段視窗一定涵蓋到它 —— 否則 emoji 那部分等於沒驗。

## §5 進入、離開、旋轉與行程死亡

**§5.1 入口在歷史抽屜的歷史區塊，是一個入口列（不是輸入框）。** 點下去必須關閉抽屜並進入搜尋畫面。
- 為什麼不是輸入框：使用者一點下去畫面就會在他手指底下換掉。

**§5.2 抽屜的其餘內容完全不變** —— 項目、順序、以及「只有歷史列表可捲動、上半部固定」這個既有行為都不得改變。
- （v3 註記：抽屜歷史列表的**順序**會因 §8 而改變。那是時間戳定義的改變，不是抽屜結構的改變；這條守的是結構。）

**§5.3 進入搜尋時輸入框已取得焦點、鍵盤自動彈出。**

**§5.4 輸入框固定在畫面最上方**，捲動結果時不會被捲走。

**§5.5 離開搜尋有三種，行為一致。** 畫面上的返回鍵、系統返回鍵、點擊命中列開啟對話 —— 三者都必須回到聊天畫面（**系統返回鍵不得退出 App**），並且都必須**清空查詢**：再次進入搜尋時輸入框是空的、顯示引導文案。

**§5.6 旋轉螢幕不算離開。** 旋轉後必須仍停在搜尋畫面，查詢字串與結果都還在，輸入框仍在最上方。
- **§5.5 與 §5.6 原本互相矛盾，矛盾的根源是「旋轉算不算一次離開」從來沒被定義**（v3.11 從架構決策搬進來的說明）。定義寫在這兩條裡：**旋轉不是離開，行程死亡不必撐過**（見 §5.7）。

**§5.7 查詢不跨行程保存。** 查詢字串不得寫進「使用者上次停在哪」這類跨行程保存的偏好。行程被系統回收後還原時，允許落在搜尋畫面、查詢為空、顯示引導文案 —— 這是乾淨且可接受的狀態，**不判 fail**。
- **可判定（前半句的禁令，v3.5 補寫）**：輸入一個查詢字串之後，跨行程保存的偏好內容裡**找不到那個字串**，而且鍵的組成沒有增加 —— 它記的仍然只有「上次停在哪」那組游標（對話 id、模型、人格）。
  - 正向對照不得省略：同一次檢查裡，那組游標必須**確實還在**（冷啟動仍續接到原本那段對話，同任務 1 驗收 6）。只斷言「找不到查詢字串」的話，一個把整個偏好清空的實作也會通過。
  - 後半句（還原後落在搜尋畫面、查詢為空）由任務 8 驗收 9 守，兩半分別驗。

## §6 點擊命中列

**§6.1 判斷依據只能是 id。** 點擊命中列時，「這是不是目前開啟的那段對話」必須依**對話 id 是否等於目前開啟對話的 id** 判斷，不得依任何只是相關、卻不等價的性質（例如「這段對話是不是空白的」）。
- 為什麼：「空白對話一定是當前那段」是從「空白對話不會被存檔」推出來的**推論**，而讀取歷史時並不會過濾空白對話 —— 一個只含助理訊息的舊檔會被讀成空白對話並進入歷史。
- **可判定（v3.5 補寫，就用上面那句理由造測資）**：在磁碟上放一個**只含助理訊息**的對話檔（它會被讀成空白對話並進入歷史），另外開著一段**不同 id** 的對話。搜該舊檔裡的字並點擊那一列 → **必須切換到那段舊對話**，聊天畫面顯示的是它的內容。
  - 這條擋的正是規則點名的那個錯誤寫法：用「這段對話是不是空白的」判斷時，這一列會被誤認成「就是目前這段」，於是畫面停在原本那段對話上，使用者點了等於沒反應。
  - **為什麼既有的條文抓不到它**：任務 8 驗收 4、5 用的都是「命中屬於目前開啟那段」的情境，兩種判準在那裡給出相同答案。要分辨兩者，測資必須是「空白、但**不是**目前開啟那段」—— 舊的驗收清單裡沒有任何一條會造出這種對話。

**§6.2 命中屬於其他對話** → 切換到該對話並回到聊天畫面，畫面內容是該對話。

**§6.3 命中屬於目前開啟的對話** → 回到聊天畫面，對話內容不變、不閃爍、不重新載入模型、不建立新對話。

**§6.4 命中屬於一段只有開場白、從未存檔的對話**（依 §1.8 必為目前開啟那段）→ 回到聊天、對話不變、不重載模型，且**不得因此在磁碟上新增或寫入任何對話檔**。
- 可判定：切人格產生空白對話 → 搜其開場白 → 點擊該筆 → 對話檔案數量與內容前後完全一致。
- 註記給實作者：走錯分支時「先存檔 → 對空白對話等於刪檔 → 找不到 → 提早返回」看起來剛好無害。**那是巧合不是設計**，不得倚賴。

**§6.5（建議，不是硬性規則）給下一個動那段程式的人：不要為空白對話另開特例分支。** §6.1–§6.4 由同一條路徑處理就夠了。
**v3.10 依使用者裁決降級：本條不再有任何驗收條文，QA 不判它。**

- **它現在的身分**：一句提醒，不是可判定的要求。**降級的理由是它說不出「它獨自抓得到什麼」** —— 若有人真的寫了那個特例分支，而 §6.2–§6.4 三種情境的行為全部正確，使用者感受不到任何差別；而「行為全部正確」本來就有條文在守（任務 8 驗收 3、4、5、13，以及驗收 14 行為那一半）。
- **與 §2.11（空白只能有一個答案）的差別，就是這次降級的判準**：§2.11 的後果是**確定**的 —— 兩份定義必然分歧，分歧那天使用者會看到搜尋結果對不起來。§6.5 則要有人**主動寫錯**才會壞，而「有人寫錯就會壞」對任何一段程式都成立。**寫得出後果的留在硬性那一側，寫不出來的降成建議。**
- **它的實績（保留，因為那是這個判斷的證據）**：抓到違反 **0** 次；害**正確**的實作差點被判 fail **3** 次；為了修這條條文花了 **3 輪** —— v3.5 寫成「只能有一個分支」（正確的實作有三個條件）、v3.6 改掉開頭卻留下更嚴的收尾句、v3.7 才把收尾句一併改成「有沒有踩到禁止項」。**三次都是同一個形狀：想表達「不准做某件壞事」，卻寫成「只能長成某個樣子」。**
- **降級沒有放寬 §6.4 的那句警告**：走錯分支時「先存檔 → 對空白對話等於刪檔 → 找不到 → 提早返回」**看起來剛好無害，那是巧合不是設計**。那句警告仍然是規則，由任務 8 驗收 5 守。
- **順帶消失的一件事**：舊條文的禁止項字面上會掃到**儲存層那個「這段對話是不是空白的」判斷**（那是 §9.1 的既有語意，不是特例分支），因此本來需要為它寫一個例外。**條文沒有了，例外也就不需要了** —— 經過記在 `spec-appendix.md`／決策歷程。
- **（歷史，不是現行結論）** v3.3 曾判斷「§6.5 的後果已由任務 8 驗收 5 守住」，那個判斷不成立（§6.4 的實作註記寫著走錯分支時看起來剛好無害，所以驗收 5 仍會通過），v3.5 因此補上結構與行為兩條可判定。**行為那一半留了下來，結構那一半在 v3.10 被拿掉。**

**§6.6 開啟一段對話不會改變任何一段對話的最後更新時間。** 見 §8.2。

## §7 鍵盤彈出時的可見性

**這一節要守的東西一句話**：邊打邊篩只有在打字的同時看得到結果才有意義 —— 鍵盤彈出時結果被擠掉，這個功能就變成「算出來了，但看不到」。**以能看到幾個命中列判定，不以像素數判定** —— 像素數換一台機器就失效。
（**v3.11**：這裡原本指向架構決策 §D.1「輸入框必須位在其捲動容器的頂端」。那是**達成手段**，現在是建議；**必須成立的性質就是本節這三條**，不必跨檔。）

**§7.1 主條文（直向）。** 在 1080x2424 / density 420 或相近的裝置上、**直向**，造出至少 4 筆命中，**鍵盤彈出、不捲動、不收鍵盤**，必須至少完整看到 **1 個對話標頭 + 4 個命中列**。需要先收鍵盤才看得見結果的，fail。

**§7.2 小螢幕。** 把系統「顯示大小」調到最大（或等效 360x640dp 的設定），重跑 §7.1：至少 **1 個對話標頭 + 2 個命中列**。

**§7.3 直向為準。** 橫向 + 鍵盤彈出時的結果可見量**不在要求範圍內**（已知限制，見「明確不做」）。
- **由哪一層守（v3.5 明寫）**：這條是**範圍排除**，不是一條要求，所以它沒有「被違反」的樣子 —— 唯一會出事的方向是有人拿橫向的可見量去判 fail。這一點已寫進任務 6 驗收 8（明文排除橫向 + 鍵盤的可見量）。**不另立條文。**

## §8 對話的「最後更新時間」什麼時候前進

**（v3 新增。）** 這一節定義的是 §3.2 排序所依據的那個時間，它同時也是抽屜歷史列表的排序依據與分組標頭上顯示的時間。**本節會改變現行行為，這是刻意的。**

**§8.1 定義。** 一段對話的最後更新時間，是**這段對話的內容最後一次改變的時間**。「內容」指的是這段對話的訊息集合，以及各則訊息的文字。

必須前進的情況（列舉，不是舉例）：
- 新增一則訊息（使用者送出、助理的回覆被建立）
- 任何一則訊息的文字改變（串流每寫進一段、結尾以完整版本覆寫、錯誤訊息寫入、**使用者按下停止時在已顯示的文字後面追加的中斷標記**）
- 任何一則訊息被移除（**含使用者在那則回覆還沒有任何文字時按下停止 —— 那則回覆整則不留下**）

**這個時間是內容的性質，不是使用者行為的紀錄**（v3.11 從架構決策搬進來，原文未改）：搜尋結果與歷史列表回答的是「哪一段對話最近有新內容」，不是「你最近看過哪一段」。§3.2 排序的意義建立在這個語意上 —— 一個會因為「看一眼」而前進的時間，回答不了它被拿來回答的那個問題。**若日後真的需要「最近看過哪一段」，那是第二個時間概念，必須各自儲存、各自命名、各自顯示，不得讓其中一個假裝是另一個**（這件事目前不做，見「明確不做」）。

> **（v3.6）為什麼這裡點名了「停止生成」。**
> **結論先講**：按下停止**算**一次更新，而且是無條件的。停止當下只有兩種可能，兩種都改變了內容 —— 已經有文字時追加中斷標記（**訊息的文字改變**），還沒有任何文字時那則回覆整則不留下（**訊息被移除**）。所以它不需要自己的規則，落在上面兩項裡。
> **為什麼要特地寫出來**：§8.2 曾經明寫過「停止生成不算」，v3.6 把那一項整條移除。整條移除之後，「**刻意移除**」與「**不小心漏掉**」在讀者眼中分不出來，所以在這裡點名它。這一句不改變任何一條判定的結果。
> **這不是推翻先前的裁決。** 使用者對「時間只跟著內容走」的裁決一個字都沒有變 —— **線沒有移動，是「停止生成」這件事從線的一邊換到另一邊**。先前把它放在「不算」那一側，前提是「按下停止只會關掉標記」；那個前提對現行程式不成立，修好之後也不會成立（修好之後停止會留下文字加標記）。
> **中斷標記長什麼樣不由本規格定義** —— 它由 `stop-generation` 那一輪規定（該輪的 R2）。本節只依賴一件事：停止會改變那則回覆的內容。§8.6 為了可判定引用了那個字串，若那一輪改了它，§8.6 跟著改。
> **這兩項各由哪一層守**：**追加中斷標記那一項** → §8.6 的預期一（任務 13 驗收 3）。**零文字時整則不留下那一項** → 本規格**不另立條文**：它在這裡的可觀察面只有「時間有沒有前進」，而那個差是次秒級的、任何以秒計的判定都分不出來（同 §8.6 換掉判定方式的理由）；「那則回覆不留下」由 `stop-generation` 那一輪的驗收守，而「訊息被移除要讓時間前進」與其他移除情況共用同一個判斷處，由任務 13 驗收 6 守。**再寫一條會是驗不到東西的條文。**

**§8.2 不算一次更新。** 下列動作**不得**讓任何一段對話的最後更新時間前進，即使它們在內部經過了「把對話寫回去」這條路：
- 切換到另一段對話（不論從抽屜或從搜尋結果觸發），對**被切走的那一段**而言
- 切換人格或切換模型，對**被切走的那一段**而言
- 進入 / 離開搜尋、輸入查詢字串、旋轉螢幕、App 啟動時載入對話、單純捲動閱讀

**這張清單管的是「這個動作本身」，不管「這個動作順帶觸發的別的事」。**（v3.6 寫明，這件事以前沒有被規範過。）具體會遇到的一種情形：**在回覆還在串流時切換走**。切換這個動作本身仍然不得蓋上新時間（第一項照舊），但它會順帶觸發一次停止，而停止會改變那則回覆的內容 —— **那次內容改變依 §8.1 讓時間前進，前進的原因是內容改變，不是切換**。兩條規則因此不衝突。
- **可判定的分辨方式**：切走一段**沒有在串流**的對話 → 時間不動（§8.4 驗的正是這個，由任務 13 驗收 2 守）；切走一段**正在串流**的對話 → 那則回覆留下部分文字加中斷標記，時間前進到停止當下。
- **後面那一半由哪一層守**：可觀察的是**文字**，而它由 `stop-generation` 那一輪守（該輪的 R10：由切換隱含觸發的停止，行為與手動停止一致）。**時間那一半在本規格裡分不出來**（前進發生在停止當下，與切換相隔次秒級），所以**不另立條文** —— 再寫一條會是驗不到東西的條文，同 §8.6 換掉判定方式的理由。
- **為什麼要特地寫這一句**：清單第一項與 §8.1 對「串流中切走」這個複合動作原本會給出相反的答案，而**這正是本輪剛剛修掉的那一型矛盾**（一條規則被「這個動作算不算」的表面切法蓋住，真正的判準其實是「內容有沒有改變」）。**判準只有一個：內容有沒有改變。** 這張清單是它的推論，不是另一套規則。

> **（v3.6 移除記錄，不是這張清單的一項）** 這張清單原本還有一項「停止生成」，**已整條移除**（連同 v3.5 加在這裡的那個待裁決警示框）。移除不是漏寫：按下停止會改變那則回覆的內容，所以它現在依 §8.1 的一般規則處理，理由見 §8.1 底下那段註記。**§8.2 的原則本身沒有改** —— 不得讓時間前進的，仍然是「沒有改到內容的動作」。移除的完整經過（矛盾怎麼被發現、選項與裁決）記在 `spec-appendix.md`／決策歷程。

**§8.3 可判定（排序不因為「看一眼」而改變）。**
- 前置：對話 A 的內容最後改變於較新的時刻，對話 B 較舊，兩段都含有一個共同的字。目前開著 A。
- 操作：從抽屜開啟 B，再從抽屜開回 A。
- 預期：進入搜尋查那個共同的字 → 分組順序仍是 A 在前、B 在後；兩個分組標頭上顯示的時間文字與操作前相同；抽屜歷史列表的順序也與操作前相同。

**§8.4 可判定（儲存體裡的時間不動）。**
- 前置：對話 A 有內容，其最後更新時間是昨天（或任何明顯早於現在的時刻）；目前開著 A。
- 操作：切換到另一段對話。
- 預期：A 在儲存體中記錄的最後更新時間仍是原來那個值。**建議判定方式**：比對切換前後 A 的存檔內容，應完全相同。

**§8.5 可判定（不得修過頭）。**
- 送出一則訊息並收到完整回覆之後，該對話的最後更新時間必須前進到回覆完成的時刻附近，且該對話在搜尋結果與抽屜歷史中都必須排到最前。
- 刪除、切換人格、切換模型、開新對話等既有流程必須全部照常運作。

**§8.6 可判定（停止之後的切換不得再推進時間）。（v3.6 改寫：節名與判定方式都換掉了，預期二的數值與舊版相同。）**
- 前置：在回覆串流途中按下停止，且**停止當下那則回覆畫面上已經有文字**（不是零文字的情況）。
- 操作：按下停止後**等待至少 30 秒不做任何事**，然後切換到另一段對話。
- 預期一（文字）：該對話存檔中，那則被停止的回覆，其文字**結尾是中斷標記** —— 本節核對時那個標記是「…（已停止）」。**這個字串由 `stop-generation` 那一輪定義（該輪的 R2），以那一輪的現行定義為準，本節只引用它。**
- 預期二（時間）：該對話存檔中的最後更新時間，比切換的時刻早**至少 30 秒** —— 它應該落在按下停止的當下（或更早的串流期間），而不是切換的時刻。
- **為什麼要換掉判定方式**：舊版只有預期二，而**不論停止有沒有推進時間，預期二都會通過** —— 推進發生在按下停止的當下，同樣早於切換 30 秒；而且停止那一刻與最後一個字出現之間的時間差是次秒級的，**任何以秒為單位的判定都分不出來**。這一條真正一直守著的是「**切換那一刻不得蓋掉時間**」，那件事沒有改變；**預期一是新的**，它是這一條第一次真的驗到「停止」而不只是驗到「切換」。
- **相依**：預期一要成立，受測建置必須已經包含 `stop-generation` 那一輪的修正（在那之前，按下停止會把整則回覆覆寫成錯誤字串）。處置寫在 `spec-tasks.md`／任務 13 驗收 3。

**§8.7 新對話的起點。** 一段對話被建立時，它的最後更新時間就是建立當下 —— 建立算它自己的第一次更新。
- 因此切換人格 / 模型後產生的空白對話仍然排在最前，§1.8 那條可判定條文不受本節影響。這兩條不衝突。

## §9 對話存取層必須保留的既有行為

**（v3.11 新增。）這一節是把原本寫在架構決策 §E.6、§E.7 裡、使用者看得見的那一半搬過來，規則一個字都沒有改。** 搬家的理由：架構決策從本輪起全部是建議、QA 不驗它，而這三件事被違反時使用者會直接遇到麻煩，所以它們屬於行為規格。

**這一節管的不是搜尋，是搜尋所依賴的那一層在被搬動之後不得壞掉的東西。** 它們不顯眼，但很多東西建立在上面。

**§9.1 儲存一段空白對話等於刪檔，不是寫檔。** 一段沒有任何使用者訊息的對話被「存起來」時，磁碟上不得因此多出一個檔。
- 可判定：切換人格產生一段只有開場白的對話 → 對話檔的數量與內容前後完全一致（§6.4 的可判定驗的正是這條的一個實例）。
- 為什麼：整個「空白對話不進歷史列表」建立在這條上，§1.8 與 §6.4 的前提也是它。**改壞的樣子是歷史列表長出一堆空殼。**

**§9.2 一個讀不起來的對話檔，不得讓其他對話消失。**
- 可判定：磁碟上放一個內容損毀的對話檔 → 歷史列表仍然完整顯示其餘對話。
- 為什麼：改壞的樣子是使用者的整份歷史一次全部不見。

**§9.3 「依 id 取一筆對話」與「取全部再挑出同一個 id」必須得到同一個答案**，包含「兩邊都找不到」這個答案。
- 可判定：對一個確實存在的 id 與一個不存在的 id 各做一次，兩條路徑的結果必須相同。
- 為什麼：這兩條路徑今天各自有呼叫端。答案不同的樣子是「從某個入口打得開的對話，從另一個入口打開卻是空的」。最容易造成這個落差的改動是「為了讓它變快，直接用 id 拼出檔名去讀」—— 那條路會同時繞過 §9.2 的容錯。

---

**接下去讀哪裡**：架構決策 §A–§G（**全部是建議，QA 不驗**）在 `spec-architecture.md`；待決策事項（**目前 1 項：決策 H，不擋開工**）在 `spec-decisions.md`；任務與驗收標準、明確不做在 `spec-tasks.md`；修訂記錄、決策歷程、歷次全驗的結論、已知取捨與風險在 `spec-appendix.md`；本輪改了什麼在上一層目錄的 `changes-v3.11.md`。
